fix name title spacing

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -202,14 +202,13 @@ body {
                     float: left;
                     padding-top: 10px;
                     position: absolute;
-                    * {
+                    > * {
                       margin-left: 10px;
                       margin-right: 10px;
                     }
                     h2 {
-                        font-size: 1.4em;
+                        font-size: 16px;
                         font-weight: 800;
-                        line-height: 1em;
                     }
                     h3 {
                         font-size: 1em;
